--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="habit" data-name="strength">💪</div>
         <div class="habit" data-name="water">💧</div>
         <div class="habit" data-name="book">📕</div>
+        <div class="habit" data-name="no-smook">🚭</div>
       </div>
 
       <div class="days"></div>
